# rubber-player

./: .gitignore  README.md  TODO  base.cc  build.sh  meson.build  name.h  people.json  player.cc  rubber-player-selections.db3  rubber_player  sound.cc  sound.h
data/: rubber-player.desktop  rubber-player.xcf
src/: base.cc  db.cc  db.h  main.cc  name.h  player.cc  player.h  rboptions.cc  rboptions.h  rpapplication.cc  rpapplication.h  rpapplicationwindow.cc  rpapplicationwindow.h  selections.cc  selections.h  sound.cc  sound.h  view.cc  view.h  waveform.cc  waveform.h
unused/: old-offline-stretch.cc  play-always.cc  play-generated-pa.cc
